--- a/website_bootstrap/src/index.html
+++ b/website_bootstrap/src/index.html
@@ -4,59 +4,50 @@
         <title>WebTech2018</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <link rel="icon" href="favicon2.ico" type="image/x-icon" />
+        
+        <link href='https://fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
         <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
 
     </head>
 
-    <body class="bg-primary">
+    <body class="">
         <script type="text/javascript" src="js/script.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/tether.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <div>
             <div class="jumbotron" style="margin-bottom: 0px;">
-                <div class="row heading1-content pt-5">
-                    <div class="col-md-6 col-sm-12 pt-lg-6 pb-lg-6 pl-lg-6">
-                        <h1 class="text-uppercase text-center text-md-left">Web Technologies and Applications</h1>
-                        <h4 class="text-center text-md-left">AY 2017-2018 Second Semester</h4>
+                <div class="row">
+                    <div class="xs col-md-12 col-sm-12 col-lg-6 pt-sm-5 pt-lg-5 pb-lg-5 pl-lg-5">
+                        <h1 class="text-uppercase font-weight-bold text-center text-lg-left">Web Technologies and Applications</h1>
+                        <h4 class="text-center text-lg-left">AY 2017-2018 Second Semester</h4>
                     </div>
-                    <div class="col-md-6 col-sm-12 text-center pb-lg-6">
-                        <img src="img/weblogo.png" class="heading1-img mt-5 mt-md-0">
+                    <div class="col-md-12 col-sm-12 col-lg-6 text-center">
+                        <img src="img/164.png" class="heading1-img mt-5 mt-md-0">
                     </div>
                 </div>
             </div>
         </div>
         
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-            <a href="index.html" class="navbar-brand text-primary" id="logo">WEBTEK 2018</a>
+        <nav class="navbar navbar-light navbar-toggleable-md bg-primary-home fixed-top">
+            <a href="index.html" class=" font-weight-bold navbar-brand logo-color-home" id="logo">WEBTEK 2018</a>
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon my-toggler"></span>
             </button>
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active dropdown">
-                        <a class="nav-link text-primary text-uppercase" href="index.html">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary-home text-uppercase" href="links/prelims.html">Prelims</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary-home text-uppercase" href="links/midterms.html">Midterms</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-primary text-uppercase" href="#" data-toggle="dropdown" data-target="dropdown-target">Prelims</a>
-                        <div class="dropdown-menu body-bg text-primary" aria-labelledby="dropdown_target">
-                            <a class="dropdown-item" href="links/prelims.html#www">WWW</a>
-                            <a class="dropdown-item" href="links/prelims.html#http">HTTP</a>
-                        </div>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-primary text-uppercase" href="#" data-toggle="dropdown" data-target="dropdown-target">Midterms</a>
-                        <div class="dropdown-menu body-bg text-primary" aria-labelledby="dropdown_target">
-                            <a class="dropdown-item" href="links/midterms.html#css">CSS</a>
-                            <a class="dropdown-item" href="links/midterms.html#javascript">JavaScript</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link text-primary text-uppercase" href="#" data-toggle="dropdown" data-target="dropdown-target">Finals</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-primary-home text-uppercase" href="#">Finals</a>
                     </li>
                 </ul>
             </div>
