--- a/website_bootstrap/src/links/midterms.html
+++ b/website_bootstrap/src/links/midterms.html
@@ -113,6 +113,23 @@
                             </ul>
                         </ul>
                         <h3>CSS Statements</h3>
+                        <ul>
+                            <li>At-rules</li>
+                            <ul>
+                                <li>@charset</li>
+                                <li>@import</li>
+                                <li>@namespace</li>
+                                <li>@media</li>
+                                <li>@supports</li>
+                                <li>@page</li>
+                                <li>@font-face</li>
+                                <li>@keyframes</li>
+                            </ul>
+                            <li>CSS Rule Sets (a.k.a., CSS Rules, Style Rules)</li>
+                            <ul>
+                                <li>Consists of a selector, followed by a brace-enclosed declataion block, which contains zero or more semi-colon (;) separated properly declaration which in turn consists of a property name followed by a colon (:) followed by a property value</li>
+                            </ul>
+                        </ul>
                         <h3>CSS Selector</h3>
                         <ul>
                             <li>Selector</li>
@@ -197,6 +214,179 @@
                             <ul>
                                 <li>adjacent sibling combinator (+)</li>
                                 <li>general sibling combinator (~)</li>
+                            </ul>
+                        </ul>
+                        <h3>CSS Rule Precedence</h3>
+                        <ul>
+                            <li>an HTML element may be the subject of the selectors of multiple style rules</li>
+                            <ul>
+                                <li>when such rules target different properties, their effects cascade (i.e, are combined)</li>
+                                <li>when the styles involve the same property, they conflict, and must be resolved such that only one style is
+			                     applied</li>
+                                <li>resolution:</li>
+                                <ul>
+                                    <li>by origin and importance</li>
+                                    <li>by specificity</li>
+                                    <li>by order</li>
+                                </ul>
+                            </ul>
+                        </ul>
+                        <h3>CSS Declarations</h3>
+                        <ul>
+                            <li>properties</li>
+                            <ul>
+                                <li>shorthand properties</li>
+                                <ul>
+                                    <li>allows authors to specify the values of several properties with a single property</li>
+                                    <li>Example:</li>
+                                    <ul>
+                                        <li>background</li>
+                                        <li>font</li>
+                                        <li>margin</li>
+                                        <li>padding</li>
+                                        <li>border</li>
+                                        <li>border-left</li>
+                                        <li>border-width</li>
+                                    </ul>
+                                </ul>
+                                <li>vendor specific extensions (a.k.a, vendor prefixes)</li>
+                                <ul>
+                                    <li>used by browser vendors as a <i>prefix </i> for the names of <i>experimental </i>or <i>non-standard </i>CSS properties; lately, vendors are moving away from vendor prefixes in favor of use-controlled flags or preferences</li>
+                                    <li>Example:</li>
+                                    <ul>
+                                        <li>-webkit-</li>
+                                        <li>-moz-</li>
+                                        <li>-o-</li>
+                                        <li>-ms-</li>
+                                    </ul>
+                                </ul>
+                                <li>custom properties a.k.a, CSS Variables (experimental)</li>
+                                <ul>
+                                    <li>properties names prefixed with --, representing a value that can be reused throughout the document using the var() function</li>
+                                </ul>
+                            </ul>
+                            <li>values</li>
+                            <ul>
+                                <li>value processing</li>
+                                <ul>
+                                    <li><i>declared, cascaded, specified, computed, used, actual</i> values</li>
+                                </ul>
+                                <li>value types</li>
+                                <ul>
+                                    <li>keywords</li>
+                                    <ul>
+                                        <li>CSS-wide keywords</li>
+                                        <ul>
+                                            <li>initial, inherit, unset</li>
+                                        </ul>
+                                        <li>property-specific keywords</li>
+                                    </ul>
+                                    <li>numbers</li>
+                                    <ul>
+                                        <li>integers or reals in deciml notation</li>
+                                    </ul>
+                                    <li>dimensions</li>
+                                    <ul>
+                                        <li>length, angle, duration, frequency, resolution</li>
+                                        <li>length units</li>
+                                        <ul>
+                                            <li>font-relative: em, ex, ch, ren</li>
+                                            <li>viewport-percentage: vw, vh, vmin, vmax</li>
+                                            <li>absolute: cm, mm, in, pt, pc, px</li>
+                                        </ul>
+                                        <li>angle units</li>
+                                        <ul>
+                                            <li>deg, grad, rad, turn</li>
+                                            <li>used in some gradient and transform functions</li>
+                                        </ul>
+                                        <li>duration (or time) units</li>
+                                        <ul>
+                                            <li>s, ms</li>
+                                            <li>used in animation. transition, and related properties</li>
+                                        </ul>
+                                        <li>frequency units</li>
+                                        <ul>
+                                            <li>Hz, kHz</li>
+                                            <li>initially introduced in CSS2 for the <i>aural</i> media type; reintroduced in CSS3, but is currently unused</li>
+                                        </ul>
+                                        <li>resolution units</li>
+                                        <ul>
+                                            <li>dpi, dpcm, dppx</li>
+                                            <li>used in media queries</li>
+                                        </ul>
+                                    </ul>
+                                    <li>percentages</li>
+                                    <ul>
+                                        <li>number with a % suffix</li>
+                                        <li>calculated as a percentage of some value (usually taken from the parent element)</li>
+                                    </ul>
+                                    <li>URLs and URIs</li>
+                                    <ul>
+                                        <li>url() function with an <i>absolute or relative</i> (to the stylesheet) URL parameter</li>
+                                        <li>denotes a pointer to a resource, such as an image or a font</li>
+                                    </ul>
+                                    <li>colors</li>
+                                    <ul>
+                                        <li>color keywords: blue</li>
+                                        <li>RGB hexadecimal notation</li>
+                                        <ul>
+                                            <li>#C0C0C0</li>
+                                            <li>#008000</li>
+                                            <li>#FF00FF</li>
+                                        </ul>
+                                        <li>RGB functions</li>
+                                        <ul>
+                                            <li>rgb(255,0,0)</li>
+                                            <li>rgb(0,0,255)</li>
+                                            <li>rgb(0,255,0)</li>
+                                        </ul>
+                                        <li>HSL functions</li>
+                                        <ul>
+                                            <li>hsl(311, 40%, 69%)</li>
+                                            <li>hsl(64, 40%, 69%)</li>
+                                            <li>hsl(96, 25%, 37%)</li>
+                                        </ul>
+                                        <li>currentcolor, transparent</li>
+                                    </ul>
+                                    <li>strings</li>
+                                    <ul>
+                                        <li>delimited by single quotes (') or double quotes (")</li>
+                                    </ul>
+                                    <li>functions</li>
+                                    <li>miscellaneous types</li>
+                                </ul>
+                            </ul>
+                        </ul>
+                        <h3>CSS Preprocessors, Frameworks, and Polyfills</h3>
+                        <ul>
+                            <li>CSS Preprocessors</li>
+                            <ul>
+                                <li>generates CSS using a custom language syntax that typically inclued features that don't exist in pure CSS (eg. variables, control-flow, nesting, mixins, functions, etc)</li>
+                                <li>Example:</li>
+                                <ul>
+                                    <li>Sass</li>
+                                    <li>Less</li>
+                                    <li>Stylus</li>
+                                </ul>
+                            </ul>
+                            <li>CSS Frameworks</li>
+                            <ul>
+                                <li>provides predefined CSS design functionality that can be reused, extended, or customized</li>
+                                <li>Example:</li>
+                                <ul>
+                                    <li>Bootstrap</li>
+                                    <li>Foundation</li>
+                                    <li>Materialize</li>
+                                </ul>
+                            <li>Polyfills</li>
+                            <ul>
+                                <li>provides features that developers expect browsers to provide natively</li>
+                                <li>Example:</li>
+                                <ul>
+                                    <li>Modernizr</li>
+                                    <li>Selectivizr</li>
+                                </ul>
+                            </ul>    
                             </ul>
                         </ul>
                     </div>
