--- a/9364A-G6/src/links/prelims.html
+++ b/9364A-G6/src/links/prelims.html
@@ -45,8 +45,8 @@
 
         <div class="contents text-content-primary">
             <div class="row">
-                <div class="col-md-2 col-sm-2"></div>
-                <div class="col-md-8 col-sm-8">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 col-sm-12">
                     <span class="anchor" id="www"></span>
                     <div class="link">
                         <h1>World Wide Web</h1>
